test/typeerrors/Examples/FbVarBind.hs
module FbVarBind where

f x = if x then 1 else x
